objects/Date_Range_Hold__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to make this an active hold date range.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delayed_Order_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Delayed Order Rule</label>
        <referenceTo>Delayed_Order_Rule__c</referenceTo>
        <relationshipLabel>Date Range Holds</relationshipLabel>
        <relationshipName>Date_Range_Holds</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Optional description of the hold period.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>The date the hold is lifted.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>The hold will start on this date.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Date Range Hold</label>
    <listViews>
        <fullName>CON_Business_Administrator_Date_Range_Hold</fullName>
        <filterScope>Queue</filterScope>
        <label>CON Business Administrator</label>
        <queue>CON_Business_Administrator</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSC_Business_Administrators_Date_Range_Hold</fullName>
        <filterScope>Queue</filterScope>
        <label>CSC Business Administrators</label>
        <queue>CSC_Business_Administrators</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DRH-{0000}</displayFormat>
        <label>Date Range Hold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Date Range Holds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EndDateLaterThanStartDate</fullName>
        <active>true</active>
        <description>The End Date must be later than the Start Date.</description>
        <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be later than Start Date.</errorMessage>
    </validationRules>
</CustomObject>